- added in dummy mixin for media queries - corrected all spacing and font sizes for all pages

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -77,3 +77,11 @@
   width: $size;
   fill: $color;
 }
+
+@mixin media-queries($breakpoint) {
+  @if $breakpoint == xl-screen {
+    @media (max-width: 112.5em) { //1400px
+      @content;
+    }
+  }
+}
