--- a/sass/pages/explore.module.scss
+++ b/sass/pages/explore.module.scss
@@ -36,7 +36,7 @@
 
   &--box {
     grid-column: full-start / col-start 6;
-    margin: 20rem 0rem;
+    margin: 26rem 0rem;
     background-color: rgba($col-accent-primary, 0.8);
     font-size: $font-size-text-lg;
     gap: 2.4rem;
