--- a/sass/pages/home.module.scss
+++ b/sass/pages/home.module.scss
@@ -37,7 +37,7 @@
 
   &--box {
     grid-column: col-start 6 / full-end;
-    margin: 20rem 0rem;
+    margin: 25rem 0rem;
   }
 
   &--title {
