--- a/sass/pages/upcoming.module.scss
+++ b/sass/pages/upcoming.module.scss
@@ -171,7 +171,7 @@
   grid-row: 2;
 
   &--box {
-    margin: 22rem 0rem;
+    margin: 28rem 0rem;
     grid-column: col-start 7 / full-end;
     transition-delay: 0.6s;
   }
@@ -311,7 +311,7 @@
 
     &--box {
       background-color: $col-main-primary;
-      padding: 4rem 12rem 4rem 6.5rem;
+      padding: 8rem 12rem 8rem 6.5rem;
       margin-top: 36rem;
     }
 
@@ -363,7 +363,7 @@
 
     &--box {
       background-color: $col-main-primary;
-      padding: 4rem 8rem 4rem 26rem;
+      padding: 8rem 8rem 8rem 26rem;
       margin-top: 34rem;
     }
 
@@ -398,7 +398,6 @@
   @include schedule(7);
   position: relative;
   margin-top: 20rem;
-  margin-bottom: 1.6rem;
 
   &::before {
     content: "";
